syntax = "proto3";

package api;

import "error.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "parameter.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default";
    value: {
      schema: {
        json_schema: {
          ref: ".api.Status";
        }
      }
    }
  }
};

service PipelineService {
  rpc GetPipeline(GetPipelineRequest) returns (Pipeline) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines/{id}"
    };
  }

  rpc ListPipelines(ListPipelinesRequest) returns (ListPipelinesResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines"
    };
  }

  rpc DeletePipeline(DeletePipelineRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/apis/v1alpha2/pipelines/{id}"
    };
  }

  rpc GetTemplate(GetTemplateRequest) returns (GetTemplateResponse) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines/{id}/templates"
    };
  }
}

message GetPipelineRequest {
  string id = 1;
}

message ListPipelinesRequest {
  string page_token = 1;
  int32 page_size = 2;
  // Can be format of "field_name", "field_name asc" or "field_name des"
  // Ascending by default.
  string sort_by = 3;
}

message ListPipelinesResponse {
  repeated Pipeline pipelines = 1;
  string next_page_token = 2;
}

message DeletePipelineRequest {
  string id = 1;
}

message GetTemplateRequest {
  string id = 1;
}

message GetTemplateResponse {
  string template = 1;
}

message Pipeline{
  string id = 1;
  google.protobuf.Timestamp created_at =2;
  string name = 3;
  string description = 4;
  repeated Parameter parameters = 5;

  // In case any error happens retrieving a pipeline field, only pipeline ID
  // and the error message is returned. Client has the flexibility of choosing
  // how to handle error. This is especially useful during listing call.
  string error = 6;
}